--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,1 +1,8 @@
 <h1>ジャンル編集</h1>
+    <%= form_with model: @genre, url: admin_genre_path(@genre.id), method: :patch do |f| %>
+        <p>
+        <%= f.label :ジャンル %>
+        <%= f.text_field :name, placeholder: "ジャンル名"  %>
+        <%= f.submit '変更を保存' %>
+        </p>
+    <% end %>
