--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -19,7 +19,7 @@
       <% @genres.each do |genre| %>
       <tr>
         <td><%= genre.name %></td>
-        <td><%= link_to "編集する", edit_admin_genre_path %></td>
+        <td><%= link_to "編集する", edit_admin_genre_path(genre.id) %></td>
       </tr>
       <% end %>
     </tbody>
