--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -18,7 +18,7 @@
         </li>
       <% elsif admin_signed_in? %>
         <li>
-          <%= link_to "商品一覧", admin_genres_path %>
+          <%= link_to "商品一覧", admin_items_path %>
         </li>
         <li>
           <%= link_to "会員一覧", admin_genres_path %>
