--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -2,7 +2,7 @@
 <%= form_with model: @item, url:admin_item_path(@item.id),local:true do |f| %>
   <p>
     <label for="inputImage">画像</label>
-    <%= f.file_field :image, placeholder: "画像", accept: "image/*" %>
+    <%= f.file_field :image, id:"inputImage", placeholder: "画像", accept: "image/*" %>
   </p>
   <p>
     <label for="inputName">商品名</label>
@@ -14,8 +14,7 @@
   </p>
   <p>
     <label for="inputGenre_id">ジャンル</label>
-    <%= f.collection_select :genre_id, Genre.all, :id, :@item.genre.name, class: "form-control" %>
-     <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), selected: @item.genre.name, autofocus: true, id:"inputGenre_id" %>
+    <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name, selected: @item.genre_id), autofocus: true, id:"inputGenre_id" %>
   </p>
   <p>
     <label for="inputPrice">税抜価格</label>
