--- a/app/views/admin/items/index.html.erb
+++ b/app/views/admin/items/index.html.erb
@@ -17,7 +17,7 @@
       <tr>
         <td><%= item.id %></td>
         <td><%= link_to item.name, admin_item_path(item.id) %></td>
-        <td><%= item.price %></td>
+        <td><%= item.price.to_s(:delimited) %></td>
         <td><%= item.genre.name %></td>
         <% if item.is_active == true %>
 					<td>販売中</th>
