--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -20,8 +20,9 @@
         <td><%= @item.genre.name %></td>
       </tr>
       <tr>
-        <th>税込価格 </th>
-        <td><%= @item.price %></td>
+        <th>税込価格(税抜価格)</th>
+        <td><%= @item.add_tax_price.to_s(:delimited) %>(<%= @item.price.to_s(:delimited) %>)円</td>
+
       </tr>
       <tr>
         <th>販売ステータス </th>
