--- a/app/views/admin/registrations/new.html.erb
+++ b/app/views/admin/registrations/new.html.erb
@@ -4,8 +4,39 @@
   <%= render "admins/shared/error_messages", resource: resource %>
 
   <div class="field">
-    <%= f.label :email %><br />
+    <%= f.label :名前 %>
+    <%= f.label :(姓) %>
+    <%= f.last_name_field :last_name, autofocus: true, autocomplete: "last_name" %>
+    <%= f.label :(名) %>
+    <%= f.first_name_field :first_name, autofocus: true, autocomplete: "first_name" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :フリガナ %>
+    <%= f.label :(セイ) %>
+    <%= f.last_name_kana_field :last_name_kana, autofocus: true, autocomplete: "last_name_kana" %>
+    <%= f.label :(メイ) %>
+    <%= f.first_name_kana_field :first_name_kana, autofocus: true, autocomplete: "first_name_kana" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :メールアドレス %>
     <%= f.email_field :email, autofocus: true, autocomplete: "email" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :郵便番号（ハイフンなし） %>
+    <%= f.postal_code_field :postal_code, autofocus: true, autocomplete: "postal_code" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :住所 %>
+    <%= f.address_field :address, autofocus: true, autocomplete: "address" %>
+  </div>
+
+  <div class="field">
+    <%= f.label :電話番号 %>
+    <%= f.telephone_number_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
   </div>
 
   <div class="field">
