--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -14,6 +14,15 @@
     <header>
       <% if customer_signed_in? %>
         <li>
+          <%= link_to "マイページ", customer_path(current_customer.id) %>
+        </li>
+        <li>
+          <%= link_to "商品一覧", items_path %>
+        </li>
+        <li>
+          <%= link_to "カート", oder_path(current_customer.id) %>
+        </li>
+        <li>
           <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
         </li>
       <% elsif admin_signed_in? %>
@@ -21,10 +30,10 @@
           <%= link_to "商品一覧", admin_items_path %>
         </li>
         <li>
-          <%= link_to "会員一覧", admin_genres_path %>
+          <%= link_to "会員一覧", admin_customers_path %>
         </li>
         <li>
-          <%= link_to "注文履歴一覧", admin_genres_path %>
+          <%= link_to "注文履歴一覧", admin_path %>
         </li>
         <li>
           <%= link_to "ジャンル一覧", admin_genres_path %>
@@ -34,7 +43,7 @@
         </li>
       <% else %>
         <li>
-          <%= link_to "商品一覧", about_path %>
+          <%= link_to "商品一覧", items_path %>
         </li>
         <li>
           <%= link_to "About", about_path%>
