--- a/app/views/public/registrations/new.html.erb
+++ b/app/views/public/registrations/new.html.erb
@@ -35,7 +35,7 @@
   </div>
 
   <div class="field">
-    <%= f.label :電話番号 %>
+    <%= f.label :電話番号（ハイフンなし） %>
     <%= f.text_field :telephone_number, autofocus: true, autocomplete: "telephone_number" %>
   </div>
 
