--- a/app/views/admin/customers/show.html.erb
+++ b/app/views/admin/customers/show.html.erb
@@ -42,4 +42,4 @@
 </table>
 
 <%= link_to "編集する", edit_admin_customer_path(@customer.id) %>
-<%= link_to "注文履歴一覧を見る", oders_path(@customer.id) %>
+<%= link_to "注文履歴一覧を見る", admin_path %>
