--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -4,3 +4,5 @@
     様々なバリエーションをご用意をしております。<br>
     また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。
     ぜひご注文ください</p>
+
+<%= image_tag 'shop.jpg', size: "500x400" %>
