--- a/app/views/public/homes/top.html.erb
+++ b/app/views/public/homes/top.html.erb
@@ -1,5 +1,25 @@
-<p>ようこそ、ながのcakeへ！<br>
+<p>
+    ようこそ、ながのcakeへ！<br>
     このサイトは、ケーキ販売のECサイトになります。<br>
     会員でない方も閲覧はできますが、<br>
-    購入には会員登録が必要になります。</p>
+    購入には会員登録が必要になります。
+</p>
+
 <h2>新着商品</h2>
+<% @items.each do |item| %>
+    <div>
+        <%= link_to item_path(item.id) do %>
+            <p>
+                <% if item.image.attached? %>
+                    <%= image_tag item.image, size: "120x100" %>
+                <% else %>
+                    <%= image_tag 'no_image', size: "120x100" %>
+                <% end %>
+            </p>
+            <p><%= item.name %></p>
+        <% end %>
+        <p>￥<%= (item.price * 1.1).floor.to_s(:delimited) %></p>
+    </div>
+<% end %>
+
+<%= link_to "全ての商品を見る＞", items_path %>
