--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -39,6 +39,6 @@
 </table>
 
 <h3>配送先</h3>
-<%= link_to "一覧を見る", addresses_path(@customer.address) %>
+<%= link_to "一覧を見る", addresses_path(@customer.id) %>
 <h3>注文履歴</h3>
-<%= link_to "一覧を見る", orders_path(@customer.orders) %>
+<%= link_to "一覧を見る", orders_path(@customer.id) %>
