--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -21,7 +21,7 @@
       </tr>
       <tr>
         <th>税込価格(税抜価格)</th>
-        <td><%= @item.add_tax_price.to_s(:delimited) %>(<%= @item.price.to_s(:delimited) %>)円</td>
+        <td><%= @item.add_tax_price %>(<%= @item.price.to_s(:delimited) %>)円</td>
 
       </tr>
       <tr>
