[Add]カート機能

--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -13,7 +13,7 @@
         </p>
         <p><%= item_true.name %></p>
       <% end %>
-        <p>￥<%= item_true.add_tax_price %></p>
+        <p>￥<%= item_true.add_tax_price.to_s(:delimited) %></p>
     </div>
   <% end %>
 </div>
