--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -2,64 +2,95 @@
 <html>
   <head>
     <title>NaganoCake</title>
-    <meta name="viewport" content="width=device-width,initial-scale=1">
     <%= csrf_meta_tags %>
     <%= csp_meta_tag %>
-
+    <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <%= stylesheet_pack_tag 'application', media: 'all', 'data-turbolinks-track': 'reload' %>
     <%= javascript_pack_tag 'application', 'data-turbolinks-track': 'reload' %>
   </head>
 
-  <body>
-    <header>
-      <div>
-        <%= link_to "Home", root_path %>
-      </div>
-      <div>
-        <% if customer_signed_in? %>
-          <li>
-            <%= link_to "マイページ", customer_path(current_customer.id) %>
-          </li>
-          <li>
-            <%= link_to "商品一覧", items_path %>
-          </li>
-          <li>
-            <%= link_to "カート", order_path(current_customer.id) %>
-          </li>
-          <li>
-            <%= link_to "ログアウト", destroy_customer_session_path, method: :delete %>
-          </li>
-        <% elsif admin_signed_in? %>
-          <li>
-            <%= link_to "商品一覧", admin_items_path %>
-          </li>
-          <li>
-            <%= link_to "会員一覧", admin_customers_path %>
-          </li>
-          <li>
-            <%= link_to "注文履歴一覧", admin_path %>
-          </li>
-          <li>
-            <%= link_to "ジャンル一覧", admin_genres_path %>
-          </li>
-          <li>
-            <%= link_to "ログアウト", destroy_admin_session_path, method: :delete %>
-          </li>
-        <% else %>
-          <li>
-            <%= link_to "商品一覧", items_path %>
-          </li>
-          <li>
-            <%= link_to "About", about_path%>
-          </li>
-          <li>
-            <%= link_to "新規登録", new_customer_registration_path %>
-          </li>
-          <li>
-            <%= link_to "ログイン", new_customer_session_path %>
-          </li>
-        <% end %>
-      </div>
+  <body class="d-flex flex-column vh-100">
+    <header class="shadow-sm">
+      <nav class="navbar navbar-expand-lg navbar-light">
+        <div class="container">
+          <div class="navbar-brand p-3">
+            <%= link_to "Home", root_path, class: 'nav-link text-dark' %>
+          </div>
+          <div class="collapse navbar-collapse" id="navbarNavDropdown">
+            <ul class="navbar-nav ml-auto">
+            <% if customer_signed_in? %>
+              <li class="nav-item">
+                <button type="button" class="btn btn-outline-primary">
+                <%= link_to "マイページ", customer_path(current_customer.id), class: 'nav-link text-light', class: 'nav-link text-dark' %>
+                </button>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
+                </button>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                <%= link_to "カート", cart_items_path(current_customer.id), class: 'nav-link text-dark' %>
+                </button>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                  <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link text-dark' %>
+                </bttun>
+              </li>
+            <% elsif admin_signed_in? %>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                  <%= link_to "商品一覧", admin_items_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
+                </bttun>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                  <%= link_to "会員一覧", admin_customers_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
+                </buuton>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                  <%= link_to "注文履歴一覧", admin_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
+                </button>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                  <%= link_to "ジャンル一覧", admin_genres_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
+                </button>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                  <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
+                </button>
+              </li>
+            <% else %>
+              <li class="nav-item">
+                <button type="button" class="btn btn-outline-primary">
+                <%= link_to "商品一覧", items_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
+                </bttun>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                <%= link_to "About", about_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
+                </bttun>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                <%= link_to "新規登録", new_customer_registration_path, class: 'nav-link text-dark' %>
+                </bttun>
+              </li>
+              <li class="nav-item">
+                <bttun type="button" class="btn btn-outline-primary">
+                <%= link_to "ログイン", new_customer_session_path, class: 'nav-link text-dark' %>
+                </bttun>
+              </li>
+            <% end %>
+            </ul>
+          </div>
+        </div>
+
     </header>
     <%= yield %>
   </body>
