--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -8,8 +8,10 @@
   <div>
     <h2><%= @item.name %></h2>
     <p><%= @item.introduction %></p>
-    <p>￥<%= @item.add_tax_price %>（税込）</p>
-    <% form_with model: @item, url:
-    <%= f.hidden_field :title, :value => "楽しいRuby" %>
+    <p>￥<%= @item.add_tax_price.to_s(:delimited) %>（税込）</p>
+    <%= form_with model: @cart_item, url: cart_items_path, local: true do |f| %>
+      <%= f.hidden_field :item_id, :value => @item.id %>
+      <%= f.select :amount, *[1..10] %>
+      <%= f.submit "カートに入れる" %>
+    <% end %>
   </div>
-
