--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -12,16 +12,20 @@
     <% @orders.each do |order| %>
       <tr>
         <td>
-          <%= link_to order.created_at.strftime("%Y-%m-%d %H:%M"), admin_order_path(order.id) %>
+          <%= link_to order.created_at.strftime("%Y/%m/%d　%H:%M:%S"), admin_order_path(order.id) %>
         </td>
         <td>
           <%= order.customer.last_name %><%= order.customer.first_name %>
         </td>
         <td>
-          <%= order.ordered_items.sum(:quantity) %>
+          <% @quantity = 0 %>
+          <% order.order_details.each do |order_detail| %>
+            <% @quantity += order_detail.amount.to_i %>
+          <% end %>
+          <%= @quantity %>
         </td>
         <td>
-          <%= order.status %>
+          <%= order.status_i18n %>
         </td>
       </tr>
     <% end %>
