--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,1 +1,37 @@
 <h2>注文履歴一覧</h2>
+<% if @orders.any? %>
+  <table>
+    <thead>
+      <tr>
+        <td>注文日</td>
+        <td>配送先</td>
+        <td>注文商品</td>
+        <td>支払金額</td>
+        <td>ステータス</td>
+        <td>注文詳細</td>
+      </tr>
+    </thead>
+    <tbody>
+      <% @orders.each do |order| %>
+        <tr>
+          <td>
+            <%= order.created_at.strftime("%Y/%m/%d") %>
+          </td>
+          <td>
+            〒<%= order.postal_code %><br><%= order.address %><br><%= order.name %>
+          </td>
+          <td>
+            <% order.order_details.each do |order_detail| %>
+              <%= order_detail.item.name %><br>
+            <% end %>
+          </td>
+          <td><%= order.total_payment.to_s(:delimited) %></td>
+          <td><%= order.status_i18n %></td>
+          <td><%= link_to "表示する", order_path(order.id), class: "btn btn-primary" %></td>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+<% else %>
+  <h3>注文はありません</h3>
+<% end %>
