--- a/app/views/public/orders/index.html.erb
+++ b/app/views/public/orders/index.html.erb
@@ -1,8 +1,8 @@
 <h2>注文履歴一覧</h2>
 <% if @orders.any? %>
-  <table>
+  <table class="table table-bordered w-100 ">
     <thead>
-      <tr>
+      <tr class="table-secondary">
         <td>注文日</td>
         <td>配送先</td>
         <td>注文商品</td>
