--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,4 +1,6 @@
-<h3>注文履歴詳細</h3>
+<div>
+  <h3 class="bg-light">注文履歴詳細</h3>
+</div>
 <table>
   <tr>
     <th>購入者</th>
@@ -14,44 +16,61 @@
   </tr>
   <tr>
     <th>支払い方法</th>
-    <td><%= @order.payment_method %></td>
+    <td><%= @order.payment_method_i18n %></td>
   </tr>
   <tr>
     <th>注文ステータス</th>
     <td>
-      <%= form_with model: @order, url:admin_order_path, local:true do |f| %>
-        <%= f.select :status, ["入金待ち","入金確認","製作中","発送準備中","発送済み"], autofocus: true, id:"inputStatus"  %>
-        <%= f.submit '更新' %>
+      <%= form_with model: @order, url: admin_order_path(@order.id), local: true do |f| %>
+        <%= f.select :status, [["入金待ち",0], ["入金確認",1], ["製作中",2], ["発送準備中",3], ["発送済み",4]] %>
+        <%= f.submit '更新', class: "btn btn-success" %>
       <% end %>
     </td>
   </tr>
 </table>
-<table>
-  <thead>
+<table class="table">
+  <thead class="thead-light">
     <tr>
-      <td>商品名</td>
-      <td>単価(税込)</td>
-      <td>数量</td>
-      <td>小計</td>
-      <td colspan="2">製作ステータス</td>
+      <th>商品名</th>
+      <th>単価(税込)</th>
+      <th>数量</th>
+      <th>小計</th>
+      <th colspan="2">製作ステータス</th>
     </tr>
   </thead>
-  <tbody>
-    <% @orders.order_details.each do |order_detail| %>
+  <tbody class="table-borderless">
+    <% @order.order_details.each do |order_detail| %>
       <tr>
         <td><%= order_detail.item.name %></td>
         <td><%= order_detail.price %></td>
         <td><%= order_detail.amount %></td>
         <td><%= order_detail.subtotal %></td>
         <td>
-          <%= form_with model: order_detail, url:admin_order_detail_path, local:true do |f| %>
-            <%= f.select :making_status, ["製作不可","製作待ち","製作中","製作完了"], autofocus: true, id:"inputMakingStatus"  %>
+          <%= form_with model: order_detail, url: admin_order_datail_path, local: true do |f| %>
+            <%= f.select :making_status, [['製作不可',0], ['製作待ち',1], ['製作中',2], ['製作完了',3]], selected: order_detail.making_status %>
             <%= f.hidden_field :order_detail_id, :value => order_detail.id %>
         </td>
         <td>
-            <%= f.submit '更新' %>
+            <%= f.submit '更新', class: "btn btn-success" %>
           <% end %>
         </td>
       </tr>
+    <% end %>
   </tbody>
 </table>
+<div>
+  <table>
+      <tr>
+        <th>商品合計</th>
+        <td><%= @total %>円</td>
+      </tr>
+      <tr>
+        <th>送料</th>
+        <td><%= @order.shipping_cost %>円</td>
+      </tr>
+      <tr>
+        <th>請求金額合計</th>
+        <td><%= @total_payment %>円</td>
+      </tr>
+  </table>
+</div>
