--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -10,78 +10,85 @@
   </head>
 
   <body class="d-flex flex-column vh-100">
-    <header class="shadow-sm">
+    <header class="shadow-sm mb-3">
       <nav class="navbar navbar-expand-lg navbar-light">
         <div class="container">
-          <div class="navbar-brand p-3">
-            <%= link_to "Home", root_path, class: 'nav-link text-dark' %>
-          </div>
+           <a class="navbar-brand p-3" href="/"><%= image_tag 'logo.png', size: "100x100" %></a>
+          <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarNavDropdown"
+                        aria-controls="navbarNavDropdown" aria-expanded="false" aria-label="Toggle navigation">
+            <span class="navbar-toggler-icon"></span>
+          </button>
+          <% if customer_signed_in? %>
+            <p>
+              ようこそ、<%= current_customer.last_name %><%= current_customer.first_name %>さん！
+            </p>
+          <% end %>
           <div class="collapse navbar-collapse" id="navbarNavDropdown">
             <ul class="navbar-nav ml-auto">
             <% if customer_signed_in? %>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <button type="button" class="btn btn-outline-primary">
-                <%= link_to "マイページ", customer_path(current_customer.id), class: 'nav-link text-light', class: 'nav-link text-dark' %>
+                <%= link_to "マイページ", customer_path(current_customer.id), class: 'nav-link text-dark' %>
                 </button>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                 <%= link_to "商品一覧", items_path, class: 'nav-link text-dark' %>
                 </button>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                 <%= link_to "カート", cart_items_path(current_customer.id), class: 'nav-link text-dark' %>
                 </button>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                   <%= link_to "ログアウト", destroy_customer_session_path, method: :delete, class: 'nav-link text-dark' %>
                 </bttun>
               </li>
             <% elsif admin_signed_in? %>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                   <%= link_to "商品一覧", admin_items_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
                 </bttun>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                   <%= link_to "会員一覧", admin_customers_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
                 </buuton>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                   <%= link_to "注文履歴一覧", admin_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
                 </button>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                   <%= link_to "ジャンル一覧", admin_genres_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
                 </button>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                   <%= link_to "ログアウト", destroy_admin_session_path, method: :delete, class: 'nav-link text-dark' %>
                 </button>
               </li>
             <% else %>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <button type="button" class="btn btn-outline-primary">
                 <%= link_to "商品一覧", items_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
                 </bttun>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                 <%= link_to "About", about_path, class: 'nav-link text-light', class: 'nav-link text-dark' %>
                 </bttun>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                 <%= link_to "新規登録", new_customer_registration_path, class: 'nav-link text-dark' %>
                 </bttun>
               </li>
-              <li class="nav-item">
+              <li class="nav-item p-2">
                 <bttun type="button" class="btn btn-outline-primary">
                 <%= link_to "ログイン", new_customer_session_path, class: 'nav-link text-dark' %>
                 </bttun>
@@ -90,8 +97,33 @@
             </ul>
           </div>
         </div>
-
     </header>
-    <%= yield %>
+    <main class="mb-auto">
+      <%= yield %>
+    </main>
+    <footer class="pt-2 pb-1 mt-3 border-top">
+      <div class="container">
+        <div class="row no-gutters">
+          <div class="col-md-4">
+            <p>CAKE　SHOP</p>
+            <%= image_tag 'logo.png', size: "80x80" %>
+          </div>
+          <div class="col-md-8 row justify-content-end">
+            <div>
+              <h5 class="mt-3 mb-2">Link</h5>
+              <ul class="p-0 list-unstyled">
+                <li>
+                  <%= link_to "会社概要", about_path %>
+                </li>
+                <li>
+                  <a href="" title="License informations">プライバシーポリシー</a>
+                </li>
+              </ul>
+            </div>
+          </div>
+        </div>
+      </div>
+    </footer>
   </body>
+
 </html>
