--- a/app/views/public/addresses/index.html.erb
+++ b/app/views/public/addresses/index.html.erb
@@ -1,39 +1,43 @@
-<h3>配送先登録／一覧</h3>
-<%= form_with model: @address, url: addresses_path, local: true do |f| %>
-  <p>
-    <%= f.label :郵便番号（ハイフンなし） %>
-    <%= f.text_field :postal_code, placeholder: "0000000" %>
-  </p>
-  <p>
-    <%= f.label :住所 %>
-    <%= f.text_field :address, placeholder: "住所" %>
-  </p>
-  <p>
-    <%= f.label :宛名 %>
-    <%= f.text_field :name, placeholder: "宛名" %>
-  </p>
-  <div>
-    <%= f.submit "新規登録" %>
-  </div>
-<% end %>
-<table>
-  <thead>
-    <tr>
-      <td>郵便番号</td>
-      <td>住所</td>
-      <td>宛名</td>
-      <td colspan="2"></td>
-    </tr>
-  </thead>
-  <tbody>
-    <% @addresses.each do |address| %>
-      <tr>
-        <td><%= address.postal_code %></td>
-        <td><%= address.address %></td>
-        <td><%= address.name %></td>
-        <td><%= link_to "編集する", edit_address_path(address) %></td>
-        <td><%= link_to "削除する", address_path(address), method: :delete, "data-confim"=>"本当に削除しますか？" %></td>
-      </tr>
+<div class="container">
+  <h3 class="bg-light inline d-inline m-5">配送先登録／一覧</h3>
+      <%= form_with model: @address, url: addresses_path, local: true do |f| %>
+      <div class="m-3">
+        <%= f.label :郵便番号（ハイフンなし）, class: "col-3" %>
+        <%= f.text_field :postal_code, placeholder: "0000000" %>
+      </div>
+      <div class="m-3">
+        <%= f.label :住所, class: "col-3" %>
+        <%= f.text_field :address, placeholder: "住所", class: "col-5 p-0" %>
+      </div>
+      <div class="m-3">
+        <%= f.label :宛名, class: "col-3" %>
+        <%= f.text_field :name, placeholder: "宛名" %>
+        <%= f.submit "新規登録", class: "btn btn-success ml-5" %>
+      </div>
     <% end %>
-  </tbody>
-</table>
+  <div class="row m-5">
+    <table class="col-8 table-bordered">
+      <thead class="table-secondary">
+        <tr>
+          <td>郵便番号</td>
+          <td>住所</td>
+          <td>宛名</td>
+          <td colspan="2"></td>
+        </tr>
+      </thead>
+      <tbody>
+        <% @addresses.each do |address| %>
+          <tr>
+            <td><%= address.postal_code %></td>
+            <td><%= address.address %></td>
+            <td><%= address.name %></td>
+            <td colspan="2" class="text-center p-1">
+              <%= link_to "編集する", edit_address_path(address), class:"btn btn-success" %>
+              <%= link_to "削除する", address_path(address), method: :delete, "data-confim"=>"本当に削除しますか？", class: "btn btn-danger" %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+ </div>
+</div>
