--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -1,60 +1,74 @@
-<h3>ショッピングカート</h3>
-<% if @cart_items.any? %>
-<div>
-  <%= link_to "カートを空にする", destroy_all_path, method: :delete, data: { confirm: "本当に削除しますか?"}, class: "btn btn-danger" %>
-</div>
-    <table>
-      <thead>
-        <tr>
-          <th colspan="2">商品名</th>
-          <th>単価(税込)</th>
-          <th>数量</th>
-          <th>小計</th>
-          <th></th>
-        </tr>
-      </thead>
-      <tbody>
-        <% @cart_items.each do |cart_item| %>
-          <tr>
-            <td>
-              <%= link_to item_path(cart_item.item.id) do %>
-                <% if cart_item.item.image.attached? %>
-                  <%= image_tag cart_item.item.image, size: "120x100" %>
-                <% else %>
-                  <%= image_tag 'no_image', size: "120x100" %>
-                <% end %>
-              <% end %>
-            </td>
-            <td>
-              <%= link_to item_path(cart_item.item.id) do %>
-                <%= cart_item.item.name %>
-              <% end %>
-            </td>
-            <td><%= cart_item.item.add_tax_price.to_s(:delimited) %></td>
-            <td>
-              <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local: true do |f| %>
-                <%= f.select :amount, *[1..10] %>
-                <%= f.submit "変更", class: "btn btn-success" %>
-              <% end %>
-            </td>
-            <td><%= cart_item.subtotal.to_s(:delimited) %></td>
-            <td>
-              <%= link_to "削除する", cart_item_path(cart_item), method: :delete, "data-confim"=>"本当に削除しますか？", class: "btn btn-danger" %>
-            </td>
+<div class="container">
+  <div class="d-flex justify-content-between">
+    <h4 class="bg-light p-2 m-3">
+      ショッピングカート
+    </h4>
+    <% if @cart_items.any? %>
+      <div class="mt-3">
+        <%= link_to "カートを空にする", destroy_all_path, method: :delete, data: { confirm: "本当に削除しますか?"}, class: "btn btn-danger" %>
+      </div>
+      </div>
+      <table class="table table-bordered w-100 ">
+        <thead>
+          <tr class="table-secondary">
+            <th colspan="2" class="text-center">商品名</th>
+            <th class="text-center">単価(税込)</th>
+            <th class="text-center">数量</th>
+            <th class="text-center">小計</th>
+            <th></th>
           </tr>
-        <% end %>
-      </tbody>
-    </table>
-  <div>
-    <p>合計金額</p>
-    <p>￥<%= @total.to_s(:delimited) %></p>
+        </thead>
+        <tbody>
+          <% @cart_items.each do |cart_item| %>
+            <tr>
+              <td colspan="2">
+                <%= link_to item_path(cart_item.item.id) do %>
+                  <% if cart_item.item.image.attached? %>
+                    <%= image_tag cart_item.item.image, size: "100x70" %>
+                  <% else %>
+                    <%= image_tag 'no_image', size: "100x70" %>
+                  <% end %>
+                  <div class="d-inline-flex ml-5">
+                    <%= cart_item.item.name %>
+                  </div>
+                <% end %>
+              </td>
+              <td class="align-middle text-center">
+                ￥<%= cart_item.item.add_tax_price.to_s(:delimited) %>
+              </td>
+              <td class="align-middle text-center">
+                <%= form_with model: cart_item, url: cart_item_path(cart_item.id), local: true do |f| %>
+                  <%= f.select :amount, *[1..10] %>
+                  <%= f.submit "変更", class: "btn btn-success" %>
+                <% end %>
+              </td>
+              <td class="align-middle text-center">
+                <%= cart_item.subtotal.to_s(:delimited) %>
+              </td>
+              <td class="align-middle text-center">
+                <%= link_to "削除する", cart_item_path(cart_item), method: :delete, "data-confim"=>"本当に削除しますか？", class: "btn btn-danger" %>
+              </td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+      <div class="row justify-content-center">
+        <table class="text-center table table-bordered w-25">
+          <tr>
+            <th class="table-secondary align-middle">合計金額</th>
+            <td class="align-middle">￥<%= @total.to_s(:delimited) %></td>
+          </tr>
+        </table>
+      </div>
+        <div class="text-center">
+          <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success mt-5" %>
+        </div>
+      <% else %>
+    </div>
+    <div class="text-center">
+      <h5>カートに商品がありません</h5>
+    </div>
+  <% end %>
+  <div class="text-center">
+    <%= link_to "買い物を続ける", items_path, class: "btn btn-primary mt-3" %>
   </div>
-  <div>
-    <%= link_to "情報入力に進む", new_order_path, class: "btn btn-success mt-5" %>
-  </div>
-<% else %>
-  <div>現在カートに商品がありません</div>
-<% end %>
-<div>
-  <%= link_to "買い物を続ける", items_path, class: "btn btn-primary mt-5" %>
-</div>
