--- a/app/views/public/customers/edit.html.erb
+++ b/app/views/public/customers/edit.html.erb
@@ -1,50 +1,53 @@
-<h3><%= @customer.last_name %><%= @customer.first_name %>さんの会員情報編集</h3>
-<%= form_with model: @customer, url: customer_path, local: true do |f| %>
-  <table>
-    <tr>
-      <th>会員ID</th>
-      <td><%= @customer.id %></td>
-    </tr>
-    <tr>
-      <th>氏名</th>
-      <td>
-        <%= f.text_field :last_name, autofocus: true, id:"inputLast_name", placeholder:"姓" %>
-        <%= f.text_field :first_name, id:"inputFirst_name", placeholder:"名" %>
-      </td>
-    </tr>
-    <tr>
-      <th>フリガナ</th>
-      <td>
-        <%= f.text_field :last_name_kana, id:"inputLast_name_kana", placeholder:"セイ" %>
-        <%= f.text_field :first_name_kana, id:"inputFirst_name_kana", placeholder:"メイ" %>
-      </td>
-    </tr>
-    <tr>
-      <th>郵便番号</th>
-      <td>
-        <%= f.text_field :postal_code, id:"inputPostal_code", placeholder:"郵便番号" %>
-      </td>
-    </tr>
-    <tr>
-      <th>住所</th>
-      <td>
-        <%= f.text_field :address, id:"inputAddress", placeholder:"住所" %>
-      </td>
-    </tr>
-    <tr>
-      <th>電話番号</th>
-      <td>
-        <%= f.text_field :telephone_number, autofocus: true, id:"inputTelephone_number", placeholder:"電話番号" %>
-      </td>
-    </tr>
-    <tr>
-      <th>メールアドレス</th>
-      <td>
-        <%= f.email_field :email, autofocus: true, id:"inputEmail", placeholder:"メールアドレス" %>
-      </td>
-    </tr>
-  </table>
-  <%= f.submit '編集内容を保存' %>
-<% end %>
-
-<%= link_to "退会する", unsubscribe_path %>
+<div class="container">
+  <h3 class="bg-light d-inline-flex p-2">
+    会員情報編集
+  </h3>
+  <%= form_with model: @customer, url: customer_path, local: true do |f| %>
+  <div class="row mx-auto">
+      <table class="m-2  col-12">
+        <tr>
+          <th class="text-center">氏名</th>
+          <td class="">
+            <%= f.text_field :last_name %>
+            <%= f.text_field :first_name %>
+          </td>
+        </tr>
+        <tr>
+          <th class="text-center">フリガナ</th>
+          <td class="">
+            <%= f.text_field :last_name_kana %>
+            <%= f.text_field :first_name_kana %>
+          </td>
+        </tr>
+        <tr>
+          <th class="text-center">郵便番号</th>
+          <td class="">
+            <%= f.text_field :postal_code %>
+          </td>
+        </tr>
+        <tr>
+          <th class="text-center">住所</th>
+          <td class="">
+            <%= f.text_field :address %>
+          </td>
+        </tr>
+        <tr>
+          <th class="text-center">電話番号</th>
+          <td class="">
+            <%= f.text_field :telephone_number %>
+          </td>
+        </tr>
+        <tr>
+          <th class="text-center">メールアドレス</th>
+          <td class="">
+            <%= f.email_field :email %>
+          </td>
+        </tr>
+      </table>
+    </div>
+    <div class="text-center m-5">
+      <%= f.submit '編集内容を保存', class: "btn btn-success m-2" %>
+    <% end %>
+    <%= link_to "退会する", unsubscribe_path, class: "btn btn-danger m-2"%>
+    </div>
+</div>
