--- a/app/views/public/customers/show.html.erb
+++ b/app/views/public/customers/show.html.erb
@@ -1,44 +1,55 @@
-<h2>マイページ</h2>
-<h3>登録情報</h3>
-<%= link_to "編集する", edit_customer_path(@customer) %>
-<table>
-  <tr>
-    <th>氏名</th>
-    <td><%= @customer.last_name %><%= @customer.first_name %></td>
-  </tr>
-  <tr>
-    <th>カナ</th>
-    <td><%= @customer.last_name_kana %><%= @customer.first_name_kana %></td>
-  </tr>
-  <tr>
-    <th>郵便番号</th>
-    <td><%= @customer.postal_code %></td>
-  </tr>
-  <tr>
-    <th>住所</th>
-    <td><%= @customer.address %></td>
-  </tr>
-  <tr>
-    <th>電話番号</th>
-    <td><%= @customer.telephone_number %></td>
-  </tr>
-  <tr>
-    <th>メールアドレス</th>
-    <td><%= @customer.email %></td>
-  </tr>
-  <tr>
-    <th>会員ステータス</th>
-    <td>
-      <% if @customer.is_deleted == false %>
-        有効
-      <% else %>
-        無効
-      <% end %>
-    </td>
-  </tr>
-</table>
-
-<h3>配送先</h3>
-<%= link_to "一覧を見る", addresses_path(@customer.id) %>
-<h3>注文履歴</h3>
-<%= link_to "一覧を見る", orders_path(@customer.id) %>
+<div class="container w-50">
+  <h3 class="bg-light inline d-inline m-5">マイページ</h3>
+  <div class="row ">
+    <h4 class="m-3 font-weight-bold">
+      登録情報
+    </h4>
+    <div class="m-3">
+      <%= link_to "編集する", edit_customer_path(@customer), class: "btn btn-success" %>
+    </div>
+  </div>
+  <table class="table table-bordered m-3 ">
+    <tr>
+      <th class="table-secondary w-25">氏名</th>
+      <td><%= @customer.last_name %><%= @customer.first_name %></td>
+    </tr>
+    <tr>
+      <th class="table-secondary">カナ</th>
+      <td><%= @customer.last_name_kana %><%= @customer.first_name_kana %></td>
+    </tr>
+    <tr>
+      <th class="table-secondary">郵便番号</th>
+      <td><%= @customer.postal_code %></td>
+    </tr>
+    <tr>
+      <th class="table-secondary">住所</th>
+      <td><%= @customer.address %></td>
+    </tr>
+    <tr>
+      <th class="table-secondary">電話番号</th>
+      <td><%= @customer.telephone_number %></td>
+    </tr>
+    <tr>
+      <th class="table-secondary">メールアドレス</th>
+      <td><%= @customer.email %></td>
+    </tr>
+    <tr>
+      <th class="table-secondary">会員ステータス</th>
+      <td>
+        <% if @customer.is_deleted == false %>
+          有効
+        <% else %>
+          無効
+        <% end %>
+      </td>
+    </tr>
+  </table>
+  <div class="row m-2">
+    <h4 class="font-weight-bold">配送先</h4>
+    <%= link_to "一覧を見る", addresses_path(@customer.id), class: "btn btn-primary ml-4" %>
+  </div>
+  <div class="row m-2">
+    <h4 class="font-weight-bold">注文履歴</h4>
+    <%= link_to "一覧を見る", orders_path(@customer.id), class: "btn btn-primary ml-2" %>
+  </div>
+</div>
