--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -1,6 +1,8 @@
-<h3>本当に退会しますか？</h3>
-<p>退会すると、会員登録情報や<br>
-これまでの購入履歴が閲覧できなくなります。<br>
-退会する場合は、「退会する」をクリックしてください。</p>
-<%= link_to "退会しない", customer_path(current_customer.id) %>
-<%= link_to "退会する", withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" } %>
+<div class="text-center" style="margin-top:100px">
+  <h3>本当に退会しますか？</h3>
+  <p>退会すると、会員登録情報や<br>
+  これまでの購入履歴が閲覧できなくなります。<br>
+  退会する場合は、「退会する」をクリックしてください。</p>
+  <%= link_to "退会しない", customer_path(current_customer.id), class: "btn btn-primary" %>
+  <%= link_to "退会する", withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-danger" %>
+</div>
