--- a/app/views/public/homes/about.html.erb
+++ b/app/views/public/homes/about.html.erb
@@ -1,8 +1,9 @@
-<h1>About</h1>
-    <p>ながのCAKEは全国はそう可能なケーキ屋さんです。<br>
-    お子様からお年寄りの方までお召いただけるよう、<br>
-    様々なバリエーションをご用意をしております。<br>
-    また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。
-    ぜひご注文ください</p>
-
-<%= image_tag 'shop.jpg', size: "500x400" %>
+    <h1 class="text-center">About</h1>
+        <p class="text-center">ながのCAKEは全国はそう可能なケーキ屋さんです。<br>
+        お子様からお年寄りの方までお召いただけるよう、<br>
+        様々なバリエーションをご用意をしております。<br>
+        また、全国へ発送可能ですので「いつ」でも「どこ」でもご注文いただけます。<br>
+        ぜひご注文ください</p>
+    <div class="text-center">
+        <%= image_tag 'shop.jpg', size: "500x400" %>
+    </div>
