--- a/app/views/public/items/index.html.erb
+++ b/app/views/public/items/index.html.erb
@@ -1,20 +1,26 @@
-<h3>商品一覧</h3>
-<p>（全<%= @items_true_count %>件）</p>
-<div class="d-flex">
-  <% @items_true.each do |item_true| %>
-    <div>
-      <%= link_to item_path(item_true.id) do %>
-        <p>
-          <% if item_true.image.attached? %>
-            <%= image_tag item_true.image, size: "120x100" %>
-          <% else %>
-            <%= image_tag 'no_image', size: "120x100" %>
-          <% end %>
-        </p>
-        <p><%= item_true.name %></p>
-      <% end %>
-        <p>￥<%= item_true.add_tax_price.to_s(:delimited) %></p>
-    </div>
-  <% end %>
+<div class="container w-75">
+  <div class="d-flex m-3">
+    <h3 class="font-weight-bold">商品一覧</h3>
+    <h5>（全<%= @items_true_count %>件）</h5>
+  </div>
+  <div class="d-flex flex-row flex-wrap col-12 m-2">
+    <% @items_true.each do |item_true| %>
+      <div class="m-2">
+        <%= link_to item_path(item_true.id) do %>
+          <p>
+            <% if item_true.image.attached? %>
+              <%= image_tag item_true.image, size: "200x140" %>
+            <% else %>
+              <%= image_tag 'no_image', size: "200x140" %>
+            <% end %>
+          </p>
+          <p><%= item_true.name %></p>
+        <% end %>
+          <p>￥<%= item_true.add_tax_price.to_s(:delimited) %></p>
+      </div>
+    <% end %>
+  </div>
+  <div class="row justify-content-center">
+    <%= paginate @items_true %>
+  </div>
 </div>
-<%= paginate @items_true %>
