--- a/app/views/public/items/show.html.erb
+++ b/app/views/public/items/show.html.erb
@@ -1,17 +1,21 @@
-  <p>
+ <div class="container d-flex w-50">
+  <p class="mt-5">
     <% if @item.image.attached? %>
-      <%= image_tag @item.image, size: "240x200" %>
+      <%= image_tag @item.image, size: "350x250" %>
     <% else %>
-      <%= image_tag 'no_image', size: "240x200" %>
+      <%= image_tag 'no_image', size: "350x250" %>
     <% end %>
   </p>
-  <div>
-    <h2><%= @item.name %></h2>
-    <p><%= @item.introduction %></p>
-    <p>￥<%= @item.add_tax_price.to_s(:delimited) %>（税込）</p>
-    <%= form_with model: @cart_item, url: cart_items_path, local: true do |f| %>
-      <%= f.hidden_field :item_id, :value => @item.id %>
-      <%= f.select :amount, *[1..10] %>
-      <%= f.submit "カートに入れる" %>
-    <% end %>
+  <div class="m-5">
+    <h2 class="font-weight-bold m-3"><%= @item.name %></h2>
+    <h5 class="m-3"><%= @item.introduction %></h5>
+    <h4 class="font-weight-bold m-3">￥<%= @item.add_tax_price.to_s(:delimited) %>（税込）</h4>
+    <div class="m-3">
+      <%= form_with model: @cart_item, url: cart_items_path, local: true do |f| %>
+        <%= f.hidden_field :item_id, :value => @item.id %>
+        <%= f.select :amount, *[1..10] %>
+        <%= f.submit "カートに入れる", class:"btn btn-success" %>
+      <% end %>
+    </div>
   </div>
+</div>
