--- a/app/views/public/orders/confirm.html.erb
+++ b/app/views/public/orders/confirm.html.erb
@@ -1,73 +1,96 @@
-<h3>注文情報確認</h3>
-<table>
-  <thead>
-    <tr>
-      <td colspan="2">商品名</td>
-      <td>単価（税込）</td>
-      <td>数量</td>
-      <td>小計</td>
-    </tr>
-  </thead>
-  <tbody>
-    <% @cart_items.each do |cart_item| %>
-    <tr>
-      <td>
-        <%= link_to item_path(cart_item.item.id) do %>
-          <% if cart_item.item.image.attached? %>
-            <%= image_tag cart_item.item.image, size: "120x100" %>
-          <% else %>
-            <%= image_tag 'no_image', size: "120x100" %>
-          <% end %>
+<div class="container">
+  <h3 class="bg-light d-inline m-5">注文情報確認</h3>
+  <div class="d-flex">
+    <table class="table table-bordered m-3 ">
+      <thead>
+        <tr class="table-secondary">
+          <td colspan="2" class="text-center">商品名</td>
+          <td class="text-center">単価（税込）</td>
+          <td class="text-center">数量</td>
+          <td class="text-center">小計</td>
+        </tr>
+      </thead>
+      <tbody>
+        <% @cart_items.each do |cart_item| %>
+        <tr>
+          <td colspan="2">
+            <%= link_to item_path(cart_item.item.id) do %>
+              <% if cart_item.item.image.attached? %>
+                <%= image_tag cart_item.item.image, size: "100x70" %>
+              <% else %>
+                <%= image_tag 'no_image', size: "100x70" %>
+              <% end %>
+              <div class="d-inline-flex ml-5">
+                <%= cart_item.item.name %>
+              </div>
+            <% end %>
+          </td>
+          <td class="align-middle text-center">
+            <%= cart_item.item.add_tax_price.to_s(:delimited) %>
+          </td>
+          <td class="align-middle text-center">
+            <%= cart_item.amount %>
+          </td>
+          <td class="align-middle text-center">
+            <%= cart_item.subtotal.to_s(:delimited) %>
+          </td>
+        </tr>
         <% end %>
-      </td>
-      <td>
-        <%= link_to item_path(cart_item.item.id) do %>
-          <%= cart_item.item.name %>
-        <% end %>
-      </td>
-      <td>
-        <%= cart_item.item.add_tax_price.to_s(:delimited) %>
-      </td>
-      <td>
-        <%= cart_item.amount %>
-      </td>
-      <td>
-        <%= cart_item.subtotal.to_s(:delimited) %>
-
-      </td>
-    </tr>
+      </tbody>
+    </table>
+    <table class="text-center table table-bordered m-3 w-25">
+      <tbody>
+        <tr>
+          <td class="table-secondary align-middle">
+            送料
+          </td>
+          <td class="align-middle">
+            ￥<%= @order.shipping_cost.to_s(:delimited) %>
+          </td>
+        </tr>
+        <tr>
+          <td class="table-secondary align-middle">
+            商品合計
+          </td>
+          <td class="align-middle">
+            ￥<%= @total.to_s(:delimited) %>
+          </td>
+        </tr>
+        <tr>
+          <td class="table-secondary align-middle">
+            請求金額
+          </td>
+          <td class="align-middle">
+            ￥<%= @order.total_payment.to_s(:delimited) %>
+          </td>
+        </tr>
+      </tbody>  
+    </table>
+  </div>
+  <div class="d-flex">
+    <h3 class="m-3 font-weight-bold">
+      支払い方法
+    </h3>
+    <p class="m-4">
+      <%= @order.payment_method_i18n %>
+    </p>
+    <h3 class="ml-5 mt-3 font-weight-bold ">
+      お届け先
+    </h3>
+    <p class="m-4">
+      〒<%= @order.postal_code %>　<%= @order.address %>　<%= @order.name %>
+    </p>
+  </div>
+  <div class="text-center">
+    <%= form_with model: @order, url: orders_path, local: true do |f| %>
+      <%= f.hidden_field :customer_id %>
+      <%= f.hidden_field :postal_code %>
+      <%= f.hidden_field :address %>
+      <%= f.hidden_field :name %>
+      <%= f.hidden_field :shipping_cost, :value => @order.shipping_cost %>
+      <%= f.hidden_field :total_payment, :value => @order.total_payment %>
+      <%= f.hidden_field :payment_method, :value => @order.payment_method %>
+      <%= f.submit "注文を確定する", class: "btn btn-success m-3" %>
     <% end %>
-  </tbody>
-</table>
-<table>
-  <tr>
-    <th>送料</th>
-    <td><%= @order.shipping_cost.to_s(:delimited) %></td>
-  </tr>
-  <tr>
-    <th>商品合計</th>
-    <td><%= @total.to_s(:delimited) %></td>
-  </tr>
-  <tr>
-    <th>請求金額</th>
-    <td><%= @order.total_payment.to_s(:delimited) %></td>
-  </tr>
-</table>
-
-<h3>支払い方法</h3>
-<%= @order.payment_method_i18n %>
-<h3>お届け先</h3>
-〒<%= @order.postal_code %>　<%= @order.address %>　<%= @order.name %>
-<div>
-  <%= form_with model: @order, url: orders_path, local: true do |f| %>
-    <%= f.hidden_field :customer_id %>
-    <%= f.hidden_field :postal_code %>
-    <%= f.hidden_field :address %>
-    <%= f.hidden_field :name %>
-    <%= f.hidden_field :shipping_cost, :value => @order.shipping_cost %>
-    <%= f.hidden_field :total_payment, :value => @order.total_payment %>
-    <%= f.hidden_field :payment_method, :value => @order.payment_method %>
-
-    <%= f.submit "注文を確定する" %>
-  <% end %>
+  </div>
 </div>
