--- a/app/views/public/orders/new.html.erb
+++ b/app/views/public/orders/new.html.erb
@@ -1,53 +1,44 @@
-<h2>注文情報入力</h3>
-<h3>支払い方法</h3>
-<%= form_with model: @order, url: confirm_path, local: true do |f| %>
-  <div  class="custom-control custom-radio">
-    <%= f.radio_button :payment_method, Order.payment_methods.key(0), id: "credit_card" %>
-    <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card], for: "credit_card" %>
-  </div>
-  <div  class="custom-control custom-radio">
-    <%= f.radio_button :payment_method, Order.payment_methods.key(1), id: "transfer" %>
-    <%= f.label :payment_method, Order.payment_methods_i18n[:transfer], for: "transfer" %>
-  </div>
-
-  <h3>お届け先</h3>
-  <div>
-    <p>
+<div class="container">
+  <h2 class="bg-light d-inline m-5">注文情報入力</h3>
+  <h4 class="m-3 font-weight-bold">支払い方法</h4>
+  <%= form_with model: @order, url: confirm_path, local: true do |f| %>
+    <div  class="custom-control custom-radio">
+      <%= f.radio_button :payment_method, Order.payment_methods.key(0), id: "credit_card" %>
+      <%= f.label :payment_method, Order.payment_methods_i18n[:credit_card], for: "credit_card" %>
+    </div>
+    <div  class="custom-control custom-radio">
+      <%= f.radio_button :payment_method, Order.payment_methods.key(1), id: "transfer" %>
+      <%= f.label :payment_method, Order.payment_methods_i18n[:transfer], for: "transfer" %>
+    </div>
+  <h4 class="m-3 font-weight-bold">お届け先</h4>
+    <div class="custom-control custom-radio mb-3">
       <%= f.radio_button :select_address, "0", id: "my_address" %>
-      <%= f.label "ご自身の住所", for: "my_address" %>
-    </p>
-    <p>〒<%= current_customer.postal_code %>
-      <%= current_customer.address %>
-      <%= current_customer.last_name %>
-      <%= current_customer.first_name %>
-    </p>
-  </div>
-  <div>
-    <p>
+      <%= f.label "ご自身の住所", for: "my_address" %><br>
+      〒<%= current_customer.postal_code %>　<%= current_customer.address %>　<%= current_customer.last_name %><%= current_customer.first_name %>
+    </div>
+    <div class="custom-control custom-radio mb-3">  
       <%= f.radio_button :select_address, "1", id: "registered_address" %>
-      <%= f.label "登録済み住所から選択", for: "registered_address" %>
-    </p>
-    <p>
+      <%= f.label "登録済み住所から選択", for: "registered_address" %><br>
       <%= f.select :address_id, options_from_collection_for_select(@addresses.all, :id, :address_display) %>
-    </p>
-  </div>
-  <div>
-    <p>
+    </div>
+    <div class="custom-control custom-radio">
       <%= f.radio_button :select_address, "2", id: "new_address" %>
       <%= f.label "新しいお届け先", for: "new_address" %>
-    </p>
-    <p>
-      <%= f.label :郵便番号 %>
-      <%= f.text_field :postal_code, autofocus: true %>
-    </p>
-    <p>
-      <%= f.label :住所 %>
-      <%= f.text_field :address %>
-    </p>
-    <p>
-      <%= f.label :宛名 %>
-      <%= f.text_field :name %>
-    </p>
-  </div>
-  <%= f.submit "確認画面に進む", class: "btn btn-primary mt-5"  %>
-<% end %>
+      <p>
+        <%= f.label :郵便番号 %>
+        <%= f.text_field :postal_code %>
+      </p>
+      <p>
+        <%= f.label :住所 %>
+        <%= f.text_field :address %>
+      </p>
+      <p>
+        <%= f.label :宛名 %>
+        <%= f.text_field :name %>
+      </p>
+    </div>
+    <div class="m-3">
+      <%= f.submit "確認画面に進む", class: "btn btn-primary mt-5"  %>
+    </div>
+  <% end %>
+</div>
