--- a/app/views/public/shared/_links.html.erb
+++ b/app/views/public/shared/_links.html.erb
@@ -1,9 +1,11 @@
 <%- if controller_name != 'sessions' %>
-  <h3>既に登録済みの方</h3>
-  <p><%= link_to "こちら", new_session_path(resource_name) %>からログインしてください。</p>
-<% end %>
+<div class="mt-5">
+    <h4 class="d-inline bg-light p-1">既に登録済みの方</h4>
+    <p class="mt-3"><%= link_to "こちら", new_session_path(resource_name) %>　からログインしてください。</p>
+  <% end %>
 
-<%- if devise_mapping.registerable? && controller_name != 'registrations' %>
-  <h3>会員登録がお済みでない方</h3>
-  <p><%= link_to "こちら", new_registration_path(resource_name) %>から新規登録を行ってください。</p>
-<% end %>
+  <%- if devise_mapping.registerable? && controller_name != 'registrations' %>
+    <h4 class="d-inline bg-light p-1">会員登録がお済みでない方</h4>
+    <p class="mt-3"><%= link_to "こちら", new_registration_path(resource_name) %>　から新規登録を行ってください。</p>
+  <% end %>
+</div>
