--- a/app/views/admin/items/show.html.erb
+++ b/app/views/admin/items/show.html.erb
@@ -1,39 +1,44 @@
-<h3>商品詳細</h3>
-  <% if @item.image.attached? %>
-    <%= image_tag @item.image, size: "250x200" %>
-  <% else %>
-    <%= image_tag 'no_image', size: "250x200" %>
-  <% end %>
-
-  <div>
-    <table>
-      <tr>
-        <th>商品名 </th>
-        <td><%= @item.name %></td>
-      </tr>
-      <tr>
-        <th>商品説明 </th>
-        <td><%= @item.introduction %></td>
-      </tr>
-      <tr>
-        <th>ジャンル </th>
-        <td><%= @item.genre.name %></td>
-      </tr>
-      <tr>
-        <th>税込価格(税抜価格)</th>
-        <td><%= @item.add_tax_price %>(<%= @item.price.to_s(:delimited) %>)円</td>
-
-      </tr>
-      <tr>
-        <th>販売ステータス </th>
-        <td>
-          <% if @item.is_active == true %>
-      	    販売中
-          <% else %>
-      	    販売停止中
-          <% end %>
-        </td>
-      </tr>
-    </table>
+<div class="container">    
+  <h3>商品詳細</h3>
+    <div class="row">
+      <div class="col-4">
+        <% if @item.image.attached? %>
+          <%= image_tag @item.image, size: "300x240" %>
+        <% else %>
+          <%= image_tag 'no_image', size: "300x240" %>
+        <% end %>
+      </div>
+      <div class="col-6">
+        <table>
+          <tr>
+            <th class="col-4" style="height:50px">商品名 </th>
+            <td><%= @item.name %></td>
+          </tr>
+          <tr>
+            <th style="height:50px">商品説明 </th>
+            <td><%= @item.introduction %></td>
+          </tr>
+          <tr>
+            <th style="height:50px">ジャンル </th>
+            <td><%= @item.genre.name %></td>
+          </tr>
+          <tr>
+            <th style="height:50px">税込価格(税抜価格)</th>
+            <td><%= @item.add_tax_price %>(<%= @item.price.to_s(:delimited) %>)円</td>
+    
+          </tr>
+          <tr>
+            <th style="height:50px">販売ステータス </th>
+            <td>
+              <% if @item.is_active == true %>
+          	    販売中
+              <% else %>
+          	    販売停止中
+              <% end %>
+            </td>
+          </tr>
+        </table>
+        <%= link_to "編集する", edit_admin_item_path(@item), class: "btn btn-success mt-4" %>
+      </div>
   </div>
-  <%= link_to "編集する", edit_admin_item_path(@item) %>
+</div>
