--- a/app/views/public/cart_items/index.html.erb
+++ b/app/views/public/cart_items/index.html.erb
@@ -70,5 +70,5 @@
     </div>
   <% end %>
   <div class="text-center">
-    <%= link_to "買い物を続ける", items_path, class: "btn btn-primary mt-3" %>
+    <%= link_to "買い物を続ける", root_path, class: "btn btn-primary mt-3" %>
   </div>
