--- a/app/views/admin/customers/index.html.erb
+++ b/app/views/admin/customers/index.html.erb
@@ -1,35 +1,40 @@
-<h3>会員一覧</h3>
-<table>
-  <thead>
-    <tr>
-      <td>会員ID</td>
-      <td>氏名</td>
-      <td>メールアドレス</td>
-      <td>ステータス</td>
-    </tr>
-  </thead>
-  <tbody>
-    <% @customers.each do |customer| %>
-      <tr>
-        <td>
-          <%= customer.id %>
-        </td>
-        <td>
-          <%= link_to admin_customer_path(customer.id) do %>
-            <%= customer.last_name %><%= customer.first_name %>
-          <% end %>
-        </td>
-        <td>
-          <%= customer.email %>
-        </td>
-        <td>
-          <% if customer.is_deleted == false %>
-  					有効
-  				<% else %>
-  					退会
-  				<% end %>
-  			</td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+  <div class="container w-50">
+    <h3>会員一覧</h3>
+    <table class="table-bordered">
+      <thead>
+        <tr class="table-secondary">
+          <td class="col-2">会員ID</td>
+          <td class="col-3">氏名</td>
+          <td class="col-3">メールアドレス</td>
+          <td class="col-2">ステータス</td>
+        </tr>
+      </thead>
+      <tbody>
+        <% @customers.each do |customer| %>
+          <tr>
+            <td>
+              <%= customer.id %>
+            </td>
+            <td>
+              <%= link_to admin_customer_path(customer.id) do %>
+                <%= customer.last_name %><%= customer.first_name %>
+              <% end %>
+            </td>
+            <td>
+              <%= customer.email %>
+            </td>
+            <td>
+              <% if customer.is_deleted == false %>
+      					<span class="text-success font-weight-bold">有効</apsn>
+      				<% else %>
+      					退会
+      				<% end %>
+      			</td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <div class="row justify-content-center">
+      <%= paginate @customers %>
+    </div>
+</div>
