--- a/app/views/admin/genres/edit.html.erb
+++ b/app/views/admin/genres/edit.html.erb
@@ -1,8 +1,10 @@
-<h1>ジャンル編集</h1>
+<div class="container">
+    <h1>ジャンル編集</h1>
     <%= form_with model: @genre, url: admin_genre_path(@genre.id), method: :patch do |f| %>
         <p>
-        <%= f.label :ジャンル %>
+        <%= f.label :ジャンル名 %>
         <%= f.text_field :name, placeholder: "ジャンル名"  %>
-        <%= f.submit '変更を保存' %>
+        <%= f.submit '変更を保存', class: "btn btn-success" %>
         </p>
     <% end %>
+</div>
