--- a/app/views/admin/genres/index.html.erb
+++ b/app/views/admin/genres/index.html.erb
@@ -1,26 +1,31 @@
+<div class="container">
 <h1>ジャンル一覧・追加</h1>
 
   <%= form_with model: @genre do |f| %>
     <p>
-    <%= f.label :ジャンル %>
+    <%= f.label :ジャンル名 %>
     <%= f.text_field :name, placeholder: "ジャンル名"  %>
-    <%= f.submit '新規登録' %>
+    <%= f.submit '新規登録', class: "btn btn-success" %>
     </p>
   <% end %>
 
-  <table>
+  <table class="col-7 table-bordered">
     <thead>
-      <tr>
-        <td>ジャンル</td>
-        <td></td>
+      <tr class="table-secondary" style="height:50px">
+        <td colspan="2">ジャンル</td>
       </tr>
     </thead>
     <tbody>
       <% @genres.each do |genre| %>
-      <tr>
-        <td><%= genre.name %></td>
-        <td><%= link_to "編集する", edit_admin_genre_path(genre.id) %></td>
+      <tr style="height:50px">
+        <td>
+          <%= genre.name %>
+        </td>
+        <td>
+          <%= link_to "編集する", edit_admin_genre_path(genre.id), class: "btn btn-success text-center" %>
+        </td>
       </tr>
       <% end %>
     </tbody>
   </table>
+</div>
