--- a/app/views/admin/homes/top.html.erb
+++ b/app/views/admin/homes/top.html.erb
@@ -1,33 +1,38 @@
-<h3>注文履歴一覧</h3>
-<table>
-  <thead>
-    <tr>
-      <td>購入日時</td>
-      <td>購入者</td>
-      <td>注文個数</td>
-      <td>注文ステータス</td>
-    </tr>
-  </thead>
-  <tbody>
-    <% @orders.each do |order| %>
-      <tr>
-        <td>
-          <%= link_to order.created_at.strftime("%Y/%m/%d　%H:%M:%S"), admin_order_path(order.id) %>
-        </td>
-        <td>
-          <%= order.customer.last_name %><%= order.customer.first_name %>
-        </td>
-        <td>
-          <% @quantity = 0 %>
-          <% order.order_details.each do |order_detail| %>
-            <% @quantity += order_detail.amount.to_i %>
-          <% end %>
-          <%= @quantity %>
-        </td>
-        <td>
-          <%= order.status_i18n %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container w-50">
+  <h3>注文履歴一覧</h3>
+    <table>
+      <thead>
+        <tr class="border-bottom">
+          <td class="col-4">購入日時</td>
+          <td class="col-3 text-center">購入者</td>
+          <td class="col-2">注文個数</td>
+          <td class="col-3">注文ステータス</td>
+        </tr>
+      </thead>
+      <tbody>
+        <% @orders.each do |order| %>
+          <tr class="border-bottom">
+            <td>
+              <%= link_to order.created_at.strftime("%Y/%m/%d　%H:%M:%S"), admin_order_path(order.id) %>
+            </td>
+            <td class="text-center">
+              <%= order.customer.last_name %><%= order.customer.first_name %>
+            </td>
+            <td class="text-center">
+              <% @quantity = 0 %>
+              <% order.order_details.each do |order_detail| %>
+                <% @quantity += order_detail.amount.to_i %>
+              <% end %>
+              <%= @quantity %>
+            </td>
+            <td class="text-center">
+              <%= order.status_i18n %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <div class="row justify-content-center m-3">
+      <%= paginate @orders %>
+    </div>
+</div>
