--- a/app/views/admin/items/edit.html.erb
+++ b/app/views/admin/items/edit.html.erb
@@ -1,31 +1,36 @@
-<h3>商品編集</h3>
-<%= form_with model: @item, url:admin_item_path(@item.id),local:true do |f| %>
+<div class="container w-50">
+  <h3>商品編集</h3>
+  <%= form_with model: @item, url:admin_item_path(@item.id),local:true do |f| %>
   <p>
-    <label for="inputImage">画像</label>
-    <%= f.file_field :image, id:"inputImage", placeholder: "画像", accept: "image/*" %>
+    <label for="inputImage" class="col-3">商品画像</label>
+    <%= f.file_field :image, id:"inputImage", accept: "image/*" %>
   </p>
   <p>
-    <label for="inputName">商品名</label>
-    <%= f.text_field :name, autofocus: true, id:"inputName", placeholder:"商品名" %>
+    <label for="inputName" class="col-3">商品名</label>
+    <%= f.text_field :name, autofocus: true %>
   </p>
   <p>
-    <label for="inputIntroduction">商品説明</label>
-    <%= f.text_area :introduction, autofocus: true, id:"inputIntroduction", placeholder:"ここに説明を記述します" %>
+    <label for="inputIntroduction" class="col-3">商品説明</label>
+    <%= f.text_area :introduction, autofocus: true %>
   </p>
   <p>
-    <label for="inputGenre_id">ジャンル</label>
+    <label for="inputGenre_id" class="col-3">ジャンル</label>
     <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name, selected: @item.genre_id), autofocus: true, id:"inputGenre_id" %>
   </p>
   <p>
-    <label for="inputPrice">税抜価格</label>
-    <%= f.text_field :price, autofocus: true, id:"inputPrice", placeholder: "1,000" %>円
+    <label for="inputPrice" class="col-3">税抜価格</label>
+    <%= f.text_field :price, autofocus: true %>円
   </p>
   <p>
-    <label for="inputIs_active">販売ステータス</label>
-    <%= f.radio_button :is_active, "true", autofocus: true, id:"inputIs_active" %>
+    <label for="inputIs_active" class="col-3">販売ステータス</label>
+    <%= f.radio_button :is_active, "true" %>
     <%= f.label :payment_method, "販売中" %>
-    <%= f.radio_button :is_active, "false", autofocus: true, id:"inputIs_active" %>
+    <%= f.radio_button :is_active, "false" %>
     <%= f.label :payment_method, "販売停止中" %>
   </p>
-  <%= f.submit '変更を保存' %>
+  <div class="d-flex justify-content-center">
+    <%= f.submit '変更を保存', class: "btn btn-success" %>
+  </div>
 <% end %>
+
+</div>
