--- a/app/views/admin/items/new.html.erb
+++ b/app/views/admin/items/new.html.erb
@@ -1,31 +1,37 @@
-<h3>商品新規登録</h3>
-<%= form_with model: @item, url:admin_items_path, local:true do |f| %>
-  <p>
-    <%= f.label :画像 %>
-    <%= f.file_field :image, accept: "image/*" %>
-  </p>
-  <p>
-    <%= f.label :商品名 %>
-    <%= f.text_field :name, placeholder: "商品名" %>
-  </p>
-  <p>
-    <%= f.label :商品説明 %>
-    <%= f.text_area :introduction, placeholder: "ここに説明を記述します" %>
-  </p>
-  <p>
-  <%= f.label :ジャンル %>
-    <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: "選択してください" %>
-  </p>
-  <p>
-  <%= f.label :税抜価格 %>
-    <%= f.text_field :price, placeholder: "1,000" %>円
-  </p>
-  <p>
-  <%= f.label :販売ステータス %>
-    <%= f.radio_button :is_active, "true" %>
-    <%= f.label :is_active, "販売中" %>
-    <%= f.radio_button :is_active, "false" %>
-    <%= f.label :is_active, "販売停止中" %>
-  </p>
-  <%= f.submit '新規登録' %>
-<% end %>
+<div class="container">
+  <div class="">
+    <h3 class="text-left">商品新規登録</h3>
+    <%= form_with model: @item, url:admin_items_path, local:true do |f| %>
+      <p>
+        <%= f.label :画像,class: "col-2" %>
+        <%= f.file_field :image, accept: "image/*" %>
+      </p>
+      <p>
+        <%= f.label :商品名,class: "col-2" %>
+        <%= f.text_field :name, placeholder: "商品名",class: "col-6" %>
+      </p>
+      <p>
+        <%= f.label :商品説明,class: "col-2 align-top" %>
+        <%= f.text_area :introduction, placeholder: "ここに説明を記述します",class: "col-6", style: "height:100px" %>
+      </p>
+      <p>
+      <%= f.label :ジャンル,class: "col-2" %>
+        <%= f.select :genre_id, options_from_collection_for_select(Genre.all, :id, :name), include_blank: "選択してください",class: "col-6" %>
+      </p>
+      <p>
+      <%= f.label :税抜価格,class: "col-2" %>
+        <%= f.text_field :price, placeholder: "1,000",class: "col-3" %>円
+      </p>
+      <p>
+      <%= f.label :販売ステータス,class: "col-2" %>
+        <%= f.radio_button :is_active, "true" %>
+        <%= f.label :is_active, "販売中" %>
+        <%= f.radio_button :is_active, "false" %>
+        <%= f.label :is_active, "販売停止中" %>
+      </p>
+      <div class="row justify-content-center">
+        <%= f.submit '新規登録', class: "btn btn-success" %>
+      </div>
+    <% end %>
+  </div>  
+</div>
