--- a/app/views/admin/orders/show.html.erb
+++ b/app/views/admin/orders/show.html.erb
@@ -1,76 +1,77 @@
-<div>
+<div class="container">
   <h3 class="bg-light">注文履歴詳細</h3>
-</div>
-<table>
-  <tr>
-    <th>購入者</th>
-    <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
-  </tr>
-  <tr>
-    <th>注文日</th>
-    <td><%= @order.created_at.strftime("%Y-%m-%d %H:%M") %></td>
-  </tr>
-  <tr>
-    <th>配送先</th>
-    <td><%= @order.postal_code %> <%= @order.address %><br><%= @order.name %></td>
-  </tr>
-  <tr>
-    <th>支払い方法</th>
-    <td><%= @order.payment_method_i18n %></td>
-  </tr>
-  <tr>
-    <th>注文ステータス</th>
-    <td>
-      <%= form_with model: @order, url: admin_order_path(@order.id), local: true do |f| %>
-        <%= f.select :status, [["入金待ち",0], ["入金確認",1], ["製作中",2], ["発送準備中",3], ["発送済み",4]] %>
-        <%= f.submit '更新', class: "btn btn-success" %>
-      <% end %>
-    </td>
-  </tr>
-</table>
-<table class="table">
-  <thead class="thead-light">
-    <tr>
-      <th>商品名</th>
-      <th>単価(税込)</th>
-      <th>数量</th>
-      <th>小計</th>
-      <th colspan="2">製作ステータス</th>
-    </tr>
-  </thead>
-  <tbody class="table-borderless">
-    <% @order.order_details.each do |order_detail| %>
-      <tr>
-        <td><%= order_detail.item.name %></td>
-        <td><%= order_detail.price %></td>
-        <td><%= order_detail.amount %></td>
-        <td><%= order_detail.subtotal %></td>
-        <td>
-          <%= form_with model: order_detail, url: admin_order_datail_path, local: true do |f| %>
-            <%= f.select :making_status, [['製作不可',0], ['製作待ち',1], ['製作中',2], ['製作完了',3]], selected: order_detail.making_status %>
-            <%= f.hidden_field :order_detail_id, :value => order_detail.id %>
-        </td>
-        <td>
-            <%= f.submit '更新', class: "btn btn-success" %>
-          <% end %>
-        </td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
-<div>
   <table>
-      <tr>
-        <th>商品合計</th>
-        <td><%= @total %>円</td>
-      </tr>
-      <tr>
-        <th>送料</th>
-        <td><%= @order.shipping_cost %>円</td>
-      </tr>
-      <tr>
-        <th>請求金額合計</th>
-        <td><%= @total_payment %>円</td>
-      </tr>
+    <tr>
+      <th>購入者</th>
+      <td><%= @order.customer.last_name %><%= @order.customer.first_name %></td>
+    </tr>
+    <tr>
+      <th>注文日</th>
+      <td><%= @order.created_at.strftime("%Y/%m/%d") %></td>
+    </tr>
+    <tr>
+      <th>配送先</th>
+      <td>〒<%= @order.postal_code %>　<%= @order.address %><br><%= @order.name %></td>
+    </tr>
+    <tr>
+      <th>支払い方法</th>
+      <td><%= @order.payment_method_i18n %></td>
+    </tr>
+    <tr>
+      <th>注文ステータス</th>
+      <td>
+        <%= form_with model: @order, url: admin_order_path(@order.id), local: true do |f| %>
+          <%= f.select :status, Order.statuses.keys.map {|k| [I18n.t("enums.order.status.#{k}"), k]} %>
+          <%= f.submit '更新', class: "btn btn-success" %>
+        <% end %>
+      </td>
+    </tr>
   </table>
+  <div class="row m-3">
+    <table class="table col-8">
+      <thead class="thead-light">
+        <tr>
+          <th>商品名</th>
+          <th>単価(税込)</th>
+          <th>数量</th>
+          <th>小計</th>
+          <th colspan="2">製作ステータス</th>
+        </tr>
+      </thead>
+      <tbody class="table-borderless">
+        <% @order_details.each do |order_detail| %>
+          <tr>
+            <td><%= order_detail.item.name %></td>
+            <td><%= order_detail.price.to_s(:delimited) %></td>
+            <td><%= order_detail.amount %></td>
+            <td><%= order_detail.subtotal.to_s(:delimited) %></td>
+            <td>
+              <%= form_with model: order_detail, url: admin_order_detail_path(order_detail), local: true do |f| %>
+                <%= f.select :making_status, OrderDetail.making_statuses.keys.map {|k| [I18n.t("enums.order_detail.making_status.#{k}"), k]} %>
+            </td>
+            <td>
+                <%= f.submit '更新', class: "btn btn-success" %>
+              <% end %>
+            </td>
+          </tr>
+        <% end %>
+      </tbody>
+    </table>
+    <div class="col-4" style="margin-top:150px">
+      <table class="align-bottom">
+          <tr>
+            <th class="col-1">商品合計</th>
+            <td class="col-1 p-0"><%= @total.to_s(:delimited) %>円</td>
+          </tr>
+          <tr>
+            <th class="col-1">送料</th>
+            <td class="col-1 p-0"><%= @order.shipping_cost.to_s(:delimited) %>円</td>
+          </tr>
+          <tr>
+            <th class="col-1">請求金額合計</th>
+            <td class="col-1 p-0"><%= @total_payment.to_s(:delimited) %>円</td>
+          </tr>
+      </table>
+    </div>
+  </div>
 </div>
