--- a/app/views/public/customers/unsubscribe.html.erb
+++ b/app/views/public/customers/unsubscribe.html.erb
@@ -4,5 +4,5 @@
   これまでの購入履歴が閲覧できなくなります。<br>
   退会する場合は、「退会する」をクリックしてください。</p>
   <%= link_to "退会しない", customer_path(current_customer.id), class: "btn btn-primary" %>
-  <%= link_to "退会する", withdraw_path, method: :patch, data: { confilm: "本当に退会しますか？" }, class: "btn btn-danger" %>
+  <%= link_to "退会する", withdraw_path, method: :patch, data: { confirm: "本当に退会しますか？" }, class: "btn btn-danger" %>
 </div>
