--- a/app/views/public/orders/show.html.erb
+++ b/app/views/public/orders/show.html.erb
@@ -1,62 +1,68 @@
-<h2>注文履歴詳細</h2>
-<h3>注文情報</h3>
-<table>
-  <tbody>
-    <tr>
-      <th>注文日</th>
-      <td><%= @order.created_at.strftime("%Y/%m/%d") %></td>
-    </tr>
-    <tr>
-      <th>配送先</th>
-      <td>〒<%= @order.postal_code %><br><%= @order.address %><br><%= @order.name %>
-    </tr>
-    <tr>
-      <th>支払方法</th>
-      <td><%= @order.payment_method_i18n %></td>
-    </tr>
-    <tr>
-      <th>ステータス</th>
-      <td><%= @order.status_i18n %></td>
-    </tr>
-  </tbody>
-</table>
-
-<h3>請求情報</h3>
-<table>
-  <tbody>
-    <tr>
-      <th>商品合計</th>
-      <td><%= @total.to_s(:delimited) %></td>
-    </tr>
-    <tr>
-      <th>配送料</th>
-      <td><%= @order.shipping_cost.to_s(:delimited) %></td>
-    </tr>
-    <tr>
-      <th>ご請求額</th>
-      <td><%= @total_payment.to_s(:delimited) %></td>
-    </tr>
-  </tbody>
-</table>
-
-<h3>注文内容</h3>
-<table>
-  <thead>
-    <tr>
-      <td>商品</td>
-      <td>単価（税込）</td>
-      <td>個数</td>
-      <td>小計</td>
-    </tr>
-  </thead>
-  <tbody>
-    <% @order_details.each do |order_detail| %>
-      <tr>
-        <td><%= order_detail.item.name %></td>
-        <td><%= order_detail.price %></td>
-        <td><%= order_detail.amount %></td>
-        <td><%= order_detail.subtotal %></td>
-      </tr>
-    <% end %>
-  </tbody>
-</table>
+<div class="container w-100">
+  <h2>注文履歴詳細</h2>
+  <div class="row">
+    <div class="col-7">
+      <h4>注文情報</h4>
+      <table class="col-11 table-bordered">
+        <tbody>
+          <tr>
+            <th class="table-secondary col-3">注文日</th>
+            <td><%= @order.created_at.strftime("%Y/%m/%d") %></td>
+          </tr>
+          <tr>
+            <th class="table-secondary col-3">配送先</th>
+            <td>〒<%= @order.postal_code %><br><%= @order.address %><br><%= @order.name %>
+          </tr>
+          <tr>
+            <th class="table-secondary col-3">支払方法</th>
+            <td><%= @order.payment_method_i18n %></td>
+          </tr>
+          <tr>
+            <th class="table-secondary col-3">ステータス</th>
+            <td><%= @order.status_i18n %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    <div class="col-4">
+      <h4>請求情報</h4>
+      <table class="table-bordered col-10">
+        <tbody>
+          <tr>
+            <th class="table-secondary">商品合計</th>
+            <td><%= @total.to_s(:delimited) %></td>
+          </tr>
+          <tr>
+            <th class="table-secondary">配送料</th>
+            <td><%= @order.shipping_cost.to_s(:delimited) %></td>
+          </tr>
+          <tr>
+            <th class="table-secondary">ご請求額</th>
+            <td><%= @total_payment.to_s(:delimited) %></td>
+          </tr>
+        </tbody>
+      </table>
+    </div>
+    </div>
+      <h4 class="mt-3">注文内容</h4>
+      <table class="table-bordered col-9">
+        <thead>
+          <tr>
+            <td class="table-secondary">商品</td>
+            <td class="table-secondary">単価（税込）</td>
+            <td class="table-secondary">個数</td>
+            <td class="table-secondary">小計</td>
+          </tr>
+        </thead>
+        <tbody>
+          <% @order_details.each do |order_detail| %>
+            <tr>
+              <td><%= order_detail.item.name %></td>
+              <td><%= order_detail.price %></td>
+              <td><%= order_detail.amount %></td>
+              <td><%= order_detail.subtotal %></td>
+            </tr>
+          <% end %>
+        </tbody>
+      </table>
+</div>
